app/bases/tracker-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tracker-frontend
  name: tracker-frontend
  namespace: frontend
spec:
  ports:
  - name: http-frontend
    port: 3000
    targetPort: 3000
  selector:
    app: tracker-frontend
  type: ClusterIP
status:
  loadBalancer: {}
